--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "packages/*"
   ],
   "scripts": {
-    "run:publish": "lerna publish  --access=public",
     "new:package": "node scripts/template.js package packages "
   },
   "devDependencies": {
     "@types/node": "^16.10.2",
+    "cz-conventional-changelog": "^3.3.0",
     "lerna": "^4.0.0",
     "typescript": "^4.4.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
