--- a/packages/validator/package.json
+++ b/packages/validator/package.json
@@ -9,6 +9,9 @@
     "build": "tsc",
     "lint": "eslint . --ext .ts"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
