--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "packages/*"
   ],
   "scripts": {
-    "new:package": "node scripts/template.js package packages "
+    "new:package": "node scripts/template.js package packages ",
+    "test": "lerna run test"
   },
   "devDependencies": {
     "@types/node": "^16.10.2",
