--- a/packages/useboolean/package.json
+++ b/packages/useboolean/package.json
@@ -8,6 +8,9 @@
     "start": "rollup -c -w",
     "test": "jest --env=jsdom"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "Emre Rothzerg",
   "devDependencies": {
     "@babel/core": "^7.15.8",
