--- a/packages/nx-s3-remote-cache/package.json
+++ b/packages/nx-s3-remote-cache/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rothzerg/xmlparser",
-  "version": "1.0.1",
+  "name": "@rothzerg/nx-s3-remote-cache",
+  "version": "1.0.0",
   "main": "dist/index.js",
   "author": "Emre Rothzerg",
   "license": "MIT",
@@ -9,7 +9,18 @@
     "build": "tsc",
     "lint": "eslint . --ext .ts"
   },
+  "dependencies": {
+    "@aws-sdk/client-s3": "^3.6.1",
+    "@aws-sdk/credential-provider-env": "^3.6.1",
+    "@aws-sdk/credential-provider-ini": "^3.6.1",
+    "@types/mkdirp": "^1.0.1",
+    "get-stream": "^6.0.0",
+    "mkdirp": "^1.0.4"
+  },
   "devDependencies": {
+    "@types/yargs": "^15.0.7",
+    "@aws-sdk/types": "^3.1.0",
+    "@nrwl/workspace": "^10.2.1",
     "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
@@ -20,6 +31,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.4",
     "prettier": "^2.4.1",
-    "ts-jest": "^27.0.5"
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.0.3"
+  },
+  "peerDependencies": {
+    "@nrwl/workspace": ">=9.2.2"
   }
 }
