--- a/package.json
+++ b/package.json
@@ -11,10 +11,32 @@
     "test": "lerna run test"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/helper-builder-react-jsx": "^7.14.5",
+    "@babel/helper-builder-react-jsx-experimental": "^7.12.11",
+    "@babel/helper-define-map": "^7.8.4",
+    "@babel/helper-regex": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-stage-0": "^7.8.3",
+    "@babel/runtime": "^7.8.4",
     "@types/node": "^16.10.2",
     "cz-conventional-changelog": "^3.3.0",
     "lerna": "^4.0.0",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "@rollup/plugin-babel": "^5.2.3",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@rollup/plugin-url": "^6.0.0",
+    "@svgr/rollup": "^5.5.0",
+    "rollup": "^2.38.5",
+    "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.29.0"
   },
   "config": {
     "commitizen": {
