--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -33,10 +33,9 @@ jobs:
         run: npx lerna exec npm run test
 
       - name: "Version and publish"
+        with:
+          node-version: 12
+          registry-url: https://registry.npmjs.org/
+        run: npm publish --access public
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git config user.name "${{ github.actor }}"
-          git config user.email "${{ github.actor}}@users.noreply.github.com"
-          npx lerna version --conventional-commits --conventional-graduate --yes
-          npx lerna publish from-git --yes
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
