--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "homepage": "https://www.rothzerg.com.au",
   "name": "monorepo-template",
   "version": "1.0.0",
+  "private": true,
   "workspaces": [
     "packages/*"
   ],
