--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "homepage": "https://www.rothzerg.com.au",
   "name": "root",
+  "private": true,
   "version": "1.0.0",
   "publishConfig": {
     "access": "restricted",
