--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -31,4 +31,6 @@ jobs:
       - name: "Version and publish"
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-        run: npm publish --access public
+        run: |
+          npm init --scope=@rothzerg
+          npm publish --access public
