--- a/packages/Canonical/package.json
+++ b/packages/Canonical/package.json
@@ -6,6 +6,9 @@
   "jsnext:main": "dist/index.es.js",
   "author": "Emre Rothzerg",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "test": "jest --passWithNoTests",
     "build": "rollup -c",
