--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -32,5 +32,4 @@ jobs:
       - name: "Version and publish"
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-        run: |
-          npm publish --access public
+        run: npm publish
