--- a/packages/converter/package.json
+++ b/packages/converter/package.json
@@ -4,13 +4,19 @@
   "main": "dist/index.js",
   "author": "Emre Rothzerg",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/emrerothzerg/rothzerg",
+    "directory": "packages/convertor"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com/"
+  },
   "scripts": {
     "test": "jest",
     "build": "tsc",
     "lint": "eslint . --ext .ts"
-  },
-  "publishConfig": {
-    "access": "public"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
