--- a/packages/xmlparser/package.json
+++ b/packages/xmlparser/package.json
@@ -4,6 +4,15 @@
   "main": "dist/index.js",
   "author": "Emre Rothzerg",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/emrerothzerg/rothzerg",
+    "directory": "packages/xmlparser"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com/"
+  },
   "scripts": {
     "test": "jest --passWithNoTests",
     "build": "tsc",
