--- a/packages/Canonical/package.json
+++ b/packages/Canonical/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rothzerg/Canonical",
-  "version": "1.0.4",
+  "name": "@rothzerg/canonical",
+  "version": "1.0.3",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
